# repos-management

./: .env.example  README.md  README.zh-CN.md  grades_summary.toml  pyproject.toml  repos_list.txt
.github/workflows/: course_harbin.yml  course_weihai.yml  lint.yml  reusable_worktree_generate.yml  update_repos_list.yml
repos_management/: __init__.py  __main__.py
scripts/: add_licenses.py  batch_trigger_workflows.sh  convert_toml_to_readme.py  fetch_repos.py  generate_worktree_info.py  pull_or_clone.py  rdme_autogen.py  readme_to_toml.py
