[project]
name = "repos-management"
version = "0.1.0"
description = "Manage multiple repositories with ease"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[dependency-groups]
dev = [
    "prek>=0.3.5",
    "ruff>=0.15.6",
    "ty>=0.0.23",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "PTH"]
ignore = ["E501"]
